# csopesy

./: .gitignore  CMakeLists.txt  CMakePresets.json  CSOPESY_MCO  CSOPESY_MCO.cpp  Config.cpp  Config.h  OsEmulator.h  README.md  console.h  csopesy-log.txt
Command/: AddCommand.cpp  AddCommand.h  Command.h  DeclareCommand.cpp  DeclareCommand.h  ForCommand.cpp  ForCommand.h  ICommand.h  PrintCommand.cpp  PrintCommand.h  ReadCommand.cpp  ReadCommand.h  SleepCommand.cpp  SleepCommand.h  SubtractCommand.cpp  SubtractCommand.h  WriteCommand.cpp  WriteCommand.h
Config/: Config.cpp  Config.h  config.txt
Memory/: MemoryManager.cpp  MemoryManager.h
Process/: myProcess.h  process.h  process_list.cpp  process_list.h
Scheduler/: scheduler.cpp  scheduler.h
Screen/: console.cpp  console.h
output/: CSOPESY_MCO
output/CSOPESY_MCO.dSYM/Contents/: Info.plist
output/CSOPESY_MCO.dSYM/Contents/Resources/DWARF/: CSOPESY_MCO
output/CSOPESY_MCO.dSYM/Contents/Resources/Relocations/x86_64/: CSOPESY_MCO.yml
